...
            android:background="@drawable/shape_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" >

            <AutoCompleteTextView
                android:id="@+id/textViewName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:ems="10"
                android:textColorHint="@color/textColorSecondary"
                android:textColor="@color/textColorPrimary"
...
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>


        <TextView
            android:id="@+id/textViewBirthDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_edittext"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:ems="10"
...
