<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.FormActivity">

    <item android:id="@+id/action_save"
        android:icon="@drawable/ic_done"
        android:title="@string/action_accept"
        app:showAsAction="always" />

</menu>